# cobalt-forward

./: .env.example  .gitignore  README.md  config.json  config.yaml  pyproject.toml  run.py  start.sh
app/: command_dispatcher.py  commands.py  config_manager.py  dependencies.py  exceptions.py  logger_config.py  main.py  message_bus.py  message_processor.py  message_transformer.py  middleware.py  performance_monitor.py  plugin_system.py  protocol_converter.py  server.py  tcp_client.py
app/client/: base.py  mqtt_client.py  ssh_client.py  tcp_client.py  websocket_client.py
app/config/: config_backup.py  config_crypto.py  config_manager.py  file_watcher.py
app/core/: base.py  command_dispatcher.py  dependencies.py  event_bus.py  exceptions.py  integration_manager.py  message_bus.py  message_processor.py  message_transformer.py  middleware.py  protocol_converter.py  shared_services.py  ssh_forwarder.py  stream_handler.py  upload_manager.py
app/models/: config_model.py
app/plugin/: base.py  dependencies.py  event.py  function.py  helpers.py  models.py  permissions.py  plugin_api.py  plugin_manager.py  plugin_system.py  sandbox.py  utils.py
app/routers/: __init__.py  commands.py  config.py  core.py  plugin.py  ssh.py  system.py  websocket.py
app/utils/: error_handler.py  performance.py
cobalt-forward-frontend/: package-lock.json  package.json
cobalt_forward/: __init__.py  main.py
cobalt_forward/application/: __init__.py  container.py  startup.py
cobalt_forward/core/: __init__.py
cobalt_forward/infrastructure/: __init__.py
cobalt_forward/plugins/: __init__.py  base.py  (+1 more)
fronted/: ssh.html
plugins/: data_processor.py
tests/: __init__.py  test_application_startup.py  test_base_component.py  test_base_component_performance.py  test_command_dispatcher.py  test_config_loader.py  test_config_manager.py  test_config_models.py  test_container.py  test_core_config.py  test_core_services_command_dispatcher.py  test_domain_commands.py  test_domain_events.py  test_domain_messages.py  test_event_bus.py  test_infrastructure_config_watcher.py  test_infrastructure_logging_setup.py  test_integration.py  test_interfaces_clients.py  test_interfaces_commands.py  test_interfaces_lifecycle.py  test_interfaces_messaging.py  test_interfaces_plugins.py  test_interfaces_ssh.py  test_interfaces_upload.py  test_main.py  test_message_bus.py  test_message_processor.py  test_performance_monitor.py  test_plugins_manager.py  test_presentation_api_app.py  test_server.py  test_ssh_client.py  test_ssh_forwarder.py  test_tcp_client.py  test_upload_manager.py
(+94 files in other folders)
